--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+	<div class="field">
+		<%= f.label :description %><br />
+		<%= f.select :groups, ['group 1', 'group_2', 'group_3'], {} ,{:multiple => true}  %>
+	</div>
   <div class="field">
     <%= f.label :published %><br />
     <%= f.date_select :published %>
